nuclearbomb/namespaces/default/degine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: degine-backend
  namespace: default
  labels:
    app: degine-backend
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: degine-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: degine-backend
    spec:
      containers:
        - name: degine-backend
          image: ghcr.io/hiibolt/degine-backend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: ca
              mountPath: /etc/degine
              readOnly: true
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 2Gi
      volumes:
        - name: ca
          configMap:
            name: degine
            items:
              - key: pooler-root.pem
                path: pooler-root.pem
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: degine-frontend
  namespace: default
  labels:
    app: degine-frontend
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: degine-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: degine-frontend
    spec:
      containers:
        - name: degine-frontend
          image: ghcr.io/hiibolt/degine-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
