nuclearbomb/namespaces/default/degine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: degine-backend
  namespace: default
spec:
  selector:
    app: degine-backend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: degine-frontend
  namespace: default
spec:
  selector:
    app: degine-frontend
  ports:
    - port: 80
      targetPort: 80
