nuclearbomb/namespaces/default/degine/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: degine
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "degine.hiibolt.com"
  rules:
    - backendRefs:
        - name: degine-frontend
          port: 80
